--- a/abtMe.html
+++ b/abtMe.html
@@ -11,36 +11,27 @@
 <body>
 
     <header>
-        <div class="LandingPage"></div>
         <div></div>
-        <a href="index.html"><img src="images/soccerball.png"></a>
+        <a href="index.html"><img src="img/logo.jpeg"></a>
         <nav>
-            <ul class="navLinks">
-                <li>
-                    <a href="index.html"> Home </a>
-                </li>
-                <li>
-                    <a href="abtMe.html"> About Me </a>
-                </li>
-            </ul>
+            <!-- your html pages -->
         </nav>
-
-        <h1>Why is Soccer the Best Sport in the World?</h1>
+        <h1>Title</h1>
     </header>
 
 
 
     <main>
         <!-- Section 1 - quote -->
-        <section class="quoteSection"> </section>
-        <q> You have to fight to reach your dream. You have to sacrifice and work hard for it. </q>
+        <section>
+            <q> Your Quote </q>
         </section>
 
         <!-- Section 2 - cards -->
         <div class="row">
             <div class="column">
                 <div>
-                    <img src="images/Messi.webp">
+                    <img src="">
                     <h2> Title </h2>
                     <p> Paragraph 1. Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit, sed do eiusmod tempor
@@ -57,7 +48,7 @@
 
             <div class="column">
                 <div>
-                    <img src="images/champions.jpeg">
+                    <img src="">
                     <h2> Title </h2>
                     <p> Paragraph 2. Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit, sed do eiusmod tempor
@@ -74,7 +65,7 @@
 
             <div class="column">
                 <div>
-                    <img src="images/barcelona.jpeg">
+                    <img src="">
                     <h2> Title </h2>
                     <p> Paragraph 3. Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit, sed do eiusmod tempor
@@ -104,15 +95,13 @@
                     nulla pariatur. Excepteur sint occaecat cupidatat
                     non proident, sunt in culpa qui officia deserunt
                     mollit anim id est laborum.</p>
-
-            </div>
         </section>
     </main>
 
 
 
     <footer>
-        <p>Copyright & copy; Year Digital NEST, FirstName LastName. All rights reserved</p>
+        <p>Copyright &copy; Year Digital NEST, FirstName LastName. All rights reserved</p>
     </footer>
 </body>
 
