I finished My blog already and just pushing the last update of it

--- a/abtMe.html
+++ b/abtMe.html
@@ -11,98 +11,75 @@
 <body>
 
     <header>
+        <div class="LandingPage"></div>
         <div></div>
-        <a href="index.html"><img src="img/logo.jpeg"></a>
+        <a href="index.html"><img src="images/soccerball.png"></a>
         <nav>
-            <!-- your html pages -->
+            <ul class="navLinks">
+                <li>
+                    <a href="index.html"> Home </a>
+                </li>
+                <li>
+                    <a href="abtMe.html"> About Me </a>
+                </li>
+            </ul>
         </nav>
-        <h1>Title</h1>
+
+        <h1>About Me</h1>
     </header>
 
 
 
     <main>
-        <!-- Section 1 - quote -->
-        <section>
-            <q> Your Quote </q>
-        </section>
+        <section class="quoteSection">
+            <h2> Sergio J. Medina-Ixta</h2>
+            <!-- Section 2 - cards -->
+            <div class="row">
+                <div class="column">
+                    <div class="content_wrap">
+                        <img src="images/IMG_8257.JPG">
+                        <h2> Hobbies</h2>
+                        <p> Some of my favorite hobbies are playing video games,
+                            listening to music, watching anime, hanging out with
+                            my friends, playing soccer, watching sports, photography,
+                            videography, working with computers, watching youtube, and
+                            be with my family.
+                        </p>
+                    </div>
+                </div>
 
-        <!-- Section 2 - cards -->
-        <div class="row">
-            <div class="column">
-                <div>
-                    <img src="">
-                    <h2> Title </h2>
-                    <p> Paragraph 1. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.</p>
+                <div class="column">
+                    <div class="content_wrap">
+                        <img src="images/IMG_6843.jpeg">
+                        <h2> Family </h2>
+                        <p> I have a pretty big family and I love them all so much.
+                            They motivate me every day and help me when I'm feeling
+                            down. They will always be the people I turn to because
+                            all they've shown is care for me. I am the oldest of three
+                            with a younger brother and sister.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="content_wrap">
+                        <img src="images/IMG_1156.JPG">
+                        <h2> Nami </h2>
+                        <p> I have a ginger cat named Nami and she is the most adorable
+                            of all time. She is 5 months old and I got her on August 1st.
+                            She is really spoiled and everyone thinks shes the cutest.
+                            I don't know what I would do without her. ALthough she drives
+                            me crazy I still love her so much.
+                        </p>
+                    </div>
                 </div>
             </div>
 
-            <div class="column">
-                <div>
-                    <img src="">
-                    <h2> Title </h2>
-                    <p> Paragraph 2. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.</p>
-                </div>
-            </div>
-
-            <div class="column">
-                <div>
-                    <img src="">
-                    <h2> Title </h2>
-                    <p> Paragraph 3. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Section 3 - did you know that -->
-        <section>
-            <div>
-                <h2>Did you know that ... </h2>
-                <p> Last Paragraph. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit
-                    in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat
-                    non proident, sunt in culpa qui officia deserunt
-                    mollit anim id est laborum.</p>
-        </section>
-    </main>
 
 
-
-    <footer>
-        <p>Copyright &copy; Year Digital NEST, FirstName LastName. All rights reserved</p>
-    </footer>
+            <footer>
+                <p>Copyright &copy; Year Digital NEST, Sergio Jesus Medina-Ixta. All rights reserved</p>
+            </footer>
 </body>
 
 </html>
