--- a/index.html
+++ b/index.html
@@ -32,67 +32,54 @@
 
     <main>
         <!-- Section 1 - quote -->
-        <section class="quoteSection"> </section>
-        <q> You have to fight to reach your dream. You have to sacrifice and work hard for it. </q>
+        <section class="quoteSection">
+            <q> You have to fight to reach your dream. You have to sacrifice and work hard for it. </q>
         </section>
 
         <!-- Section 2 - cards -->
         <div class="row">
             <div class="column">
-                <div>
+                <div class="content_wrap">
                     <img src="images/Messi.webp">
-                    <h2> Title </h2>
-                    <p> Paragraph 1. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.</p>
+                    <h2> The World Cup </h2>
+                    <p> The World Cup is a global soccer event that happens every 4 years where the best
+                        teams compete with each other to decide who the greatest team is. Last year, in December 2022
+                        Argentina won the competition and Lionel Messi took the Golden Ball naming him the best player
+                        of the tournament. The World Cup is the most watched soccer event every year it happens. This
+                        past World Cup Final
+                        between France and Argentina wracked in 1.5 billion viewers and the stadium sold out.</p>
                 </div>
             </div>
 
             <div class="column">
-                <div>
+                <div class="content_wrap">
                     <img src="images/champions.jpeg">
-                    <h2> Title </h2>
-                    <p> Paragraph 2. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.</p>
+                    <h2> Champions League </h2>
+                    <p> The Champions league is the second biggest soccer event in the world. It happens every year
+                        and decides who the greatest soccer club is. The World Cup is international and the Champions
+                        League is European Clubs only. The most recent winners are Manchester City who beat Inter Milan
+                        to
+                        claim the 2022 - 2023 Champions League. The most winning club of the Champions League is Real
+                        Madrid
+                        with 14 won in their history. </p>
                 </div>
             </div>
 
             <div class="column">
-                <div>
+                <div class="content_wrap">
                     <img src="images/barcelona.jpeg">
-                    <h2> Title </h2>
-                    <p> Paragraph 3. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.</p>
+                    <h2> Different Leagues </h2>
+                    <p> There are multiple soccer leagues across the world. The U.S. has the MLS
+                        (Major League Soccer.) Europe has the Top 5 Leagues in the whole world, The Premiere League,
+                        LaLiga, Serie A, Bundesliga, Ligue 1. All these leagues have their own standings and decide
+                        a winner at the end of the season. The best teams of the Top 5 Leagues compete in
+                        the Champions League. </p>
                 </div>
             </div>
         </div>
-
         <!-- Section 3 - did you know that -->
-        <section>
-            <div>
+        <section class="LastSelection">
+            <div class="content_wrap">
                 <h2>Did you know that ... </h2>
                 <p> Last Paragraph. Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
@@ -104,7 +91,6 @@
                     nulla pariatur. Excepteur sint occaecat cupidatat
                     non proident, sunt in culpa qui officia deserunt
                     mollit anim id est laborum.</p>
-
             </div>
         </section>
     </main>
@@ -112,7 +98,7 @@
 
 
     <footer>
-        <p>Copyright & copy; Year Digital NEST, FirstName LastName. All rights reserved</p>
+        <p>Copyright &copy; Year Digital NEST, Sergio Jesus Medina-Ixta. All rights reserved</p>
     </footer>
 </body>
 
