--- a/index.html
+++ b/index.html
@@ -81,16 +81,7 @@
         <section class="LastSelection">
             <div class="content_wrap">
                 <h2>Did you know that ... </h2>
-                <p> Last Paragraph. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit
-                    in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat
-                    non proident, sunt in culpa qui officia deserunt
-                    mollit anim id est laborum.</p>
+                <p> Messi is the greatest Soccer player of all time.</p>
             </div>
         </section>
     </main>
